Fix padding issue on mobile devices

--- a/app/styles/components/layout/boxes.scss
+++ b/app/styles/components/layout/boxes.scss
@@ -151,10 +151,17 @@ layout-boxes {
 				background-color:var(--light-color);
 
 				div {
-					padding-left: 15%;
+					padding-left:15%;
 					padding-right:15%;
-					padding-bottom: 15%;
-					padding-top: 5%;
+					padding-bottom:10%;
+					padding-top:10%;
+
+					@include media(max-width-960) {
+						padding-left:10%;
+						padding-right:10%;
+						padding-bottom:10%;
+						padding-top:5%;
+					}
 
 					>h3 {
 						font-size: 32px;
